# simhash

./: .gitignore  Cargo.toml  README.md  pyproject.toml  tox.ini
src/: feature.rs  features.rs  hamming.rs  hash.rs  hash_byte_pair.rs  lib.rs  map.rs  simhasher.rs  tree.rs  util.rs  window.rs
tests/: test_simdict.py  test_simhash.py
