[package]
name = "simhash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "simhash"
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.5.0"
pyo3 = "0.25.0"
siphasher = "1.0.1"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
